src/blocks/filter/editor.css
.wp-block-hrswp-filter.is-selected,
.wp-block-hrswp-filter.has-child-selected {
	border-top: 1px dashed var(--wp-admin-theme-color);
	border-bottom: 1px dashed var(--wp-admin-theme-color);
}

.wp-block-hrswp-filter::before {
	background: url(icons/search.svg);
	background-position: left 100%;
	background-repeat: no-repeat;
	background-size: contain;
	content: "";
	display: block;
	height: 50px;
	width: 100%;
}

